@@ -1,3 +1,8 @@
+Wed Jun 17 16:57:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* load.c (rb_f_require): RDoc updated.  a patch from Run Paint Run
+	  Run in [ruby-core:23833].
+
 Wed Jun 17 14:37:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* sample/test.rb (valid_syntax?): skips BOM.  [ruby-dev:38666]
